[package]
name = "windows_manipulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "process_injection"
path = "src/process_injection.rs"

[[bin]]
name = "token_stealing"
path = "src/token_stealing.rs"

[[bin]]
name = "hide_thread_debugger"
path = "src/hide_thread_debugger.rs"

[[bin]]
name = "pipe_process"
path = "src/pipe_process.rs"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinInet",
    "Win32_System_SystemServices",
    "Win32_System",
    "Win32_Networking",
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
] }
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = [
    "_INDIRECT_",
] }
winapi = { version = "0.3.9", features = [
    "winbase",
    "wincon",
    "winerror",
    "winnt",
    "synchapi",
    "minwinbase",
    "winuser",
    "namedpipeapi",
    "errhandlingapi",
] }
ntapi = { version = "0.4.1" }
